5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1593_1805.log
== SUBMITION (2019-04-06 20:57:38) 
-- CODE:
xa=float(input("cordenadas de xa"))
ya=float(input("cordenadas de ya"))
xb=float(input("cordenadas de xb"))
yb=float(input("cordenadas de yb"))
xm = (xb+xa)/2
ym =(yb+ya)/2
print(xm)
print(ym)
-- EXECUTION TIME:
0.148101
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 20:57:43) 
-- CODE:
xa=float(input("cordenadas de xa"))
ya=float(input("cordenadas de ya"))
xb=float(input("cordenadas de xb"))
yb=float(input("cordenadas de yb"))
xm = (xb+xa)/2
ym =(yb+ya)/2
print(xm)
print(ym)
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 20:58:05) 
-- CODE:
xa=float(input("cordenadas de xa"))
ya=float(input("cordenadas de ya"))
xb=float(input("cordenadas de xb"))
yb=float(input("cordenadas de yb"))
xm = (xb+xa)/2
ym =(yb+ya)/2
print(xm)
print(ym)
-- EXECUTION TIME:
0.184425
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 20:59:13) 
-- CODE:
xa=float(input("cordenadas de xa"))
ya=float(input("cordenadas de ya"))
xb=float(input("cordenadas de xb"))
yb=float(input("cordenadas de yb"))
xm = (xb+xa)/2
ym =(yb+ya)/2
print(xm)
print(ym)
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 20:59:46) 
-- CODE:
xa=float(input("cordenadas de xa"))
ya=float(input("cordenadas de ya"))
xb=float(input("cordenadas de xb"))
yb=float(input("cordenadas de yb"))
xm = (xb+xa)/2
ym =(yb+ya)/2
print(xm)
print(ym)
-- EXECUTION TIME:
0.164519
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:01:09) 
-- CODE:
xa=float(input("cordenadas de xa"))
ya=float(input("cordenadas de ya"))
xb=float(input("cordenadas de xb"))
yb=float(input("cordenadas de yb"))
xm = (xb+xa)/2
ym =(yb+ya)/2
print(xm)
print(ym)
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:01:32) 
-- CODE:
xa=float(input("cordenadas de xa"))
ya=float(input("cordenadas de ya"))
xb=float(input("cordenadas de xb"))
yb=float(input("cordenadas de yb"))
xm = (xb+xa)/2
ym =(yb+ya)/2
print(xm)
print(ym)
-- EXECUTION TIME:
0.185436
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:03:08) 
-- CODE:
xa=float(input("cordenadas de xa"))
ya=float(input("cordenadas de ya"))
xb=float(input("cordenadas de xb"))
yb=float(input("cordenadas de yb"))
xm = (xb+xa)/2
ym =(yb+ya)/2
print(xm)
print(ym)
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:04:12) 
-- CODE:
xa=float(input("cordenadas de xa"))
ya=float(input("cordenadas de ya"))
xb=float(input("cordenadas de xb"))
yb=float(input("cordenadas de yb"))
xm = (xb+xa)/2
ym =(yb+ya)/2
print(xm)
print(ym)
-- EXECUTION TIME:
0.133948
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:18:42) 
-- CODE:
xa=float(input("cordenadas de xa"))
ya=float(input("cordenadas de ya"))
xb=float(input("cordenadas de xb"))
yb=float(input("cordenadas de yb"))

xm = (xb+xa)/2
ym =(yb+ya)/2

print(round(xm, 2)
print(round(ym, 2)
-- ERROR:
File "XXXX", line 10
    print(round(ym, 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:19:36) 
-- CODE:
xa=float(input("cordenadas de xa"))
ya=float(input("cordenadas de ya"))
xb=float(input("cordenadas de xb"))
yb=float(input("cordenadas de yb"))

xm = (xb+xa)/2
ym =(yb+ya)/2

print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:19:54) 
-- CODE:
xa=float(input("cordenadas de xa"))
ya=float(input("cordenadas de ya"))
xb=float(input("cordenadas de xb"))
yb=float(input("cordenadas de yb"))

xm = (xb+xa)/2
ym =(yb+ya)/2

print(round(xm, 2))
print(round(ym, 2))
-- EXECUTION TIME:
0.154793
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:20:29) 
-- CODE:
xa=float(input("cordenadas de xa"))
ya=float(input("cordenadas de ya"))
xb=float(input("cordenadas de xb"))
yb=float(input("cordenadas de yb"))

xm = (xb+xa)/2
ym =(yb+ya)/2

print(round(xm))
print(round(ym))
-- OUTPUT:
40
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:20:51) 
-- CODE:
xa=float(input("cordenadas de xa"))
ya=float(input("cordenadas de ya"))
xb=float(input("cordenadas de xb"))
yb=float(input("cordenadas de yb"))

xm = (xb+xa)/2
ym =(yb+ya)/2

print(round(xm))
print(round(ym))
-- EXECUTION TIME:
0.139452
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40
36
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
4
2
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:21:06) 
-- CODE:
xa=float(input("cordenadas de xa"))
ya=float(input("cordenadas de ya"))
xb=float(input("cordenadas de xb"))
yb=float(input("cordenadas de yb"))

xm = (xb+xa)/2
ym =(yb+ya)/2

print(round(xm, ))
print(round(ym, ))
-- OUTPUT:
40
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:21:41) 
-- CODE:
xa=float(input("cordenadas de xa"))
ya=float(input("cordenadas de ya"))
xb=float(input("cordenadas de xb"))
yb=float(input("cordenadas de yb"))

xm = (xb+xa)/2
ym =(yb+ya)/2

print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:21:55) 
-- CODE:
xa=float(input("cordenadas de xa"))
ya=float(input("cordenadas de ya"))
xb=float(input("cordenadas de xb"))
yb=float(input("cordenadas de yb"))

xm = (xb+xa)/2
ym =(yb+ya)/2

print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:22:09) 
-- CODE:
xa=float(input("cordenadas de xa"))
ya=float(input("cordenadas de ya"))
xb=float(input("cordenadas de xb"))
yb=float(input("cordenadas de yb"))

xm = (xb+xa)/2
ym =(yb+ya)/2

print(round(xm, 2))
print(round(ym, 2))
-- EXECUTION TIME:
0.137498
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:23:40) 
-- CODE:
xa=float(input("cordenadas de xa"))
ya=float(input("cordenadas de ya"))
xb=float(input("cordenadas de xb"))
yb=float(input("cordenadas de yb"))

xm = (xb+xa)/2
ym =(yb+ya)/2

print(round(xm, 1))
print(round(ym, 1))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:23:53) 
-- CODE:
xa=float(input("cordenadas de xa"))
ya=float(input("cordenadas de ya"))
xb=float(input("cordenadas de xb"))
yb=float(input("cordenadas de yb"))

xm = (xb+xa)/2
ym =(yb+ya)/2

print(round(xm, 1))
print(round(ym, 1))
-- EXECUTION TIME:
0.204343
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
